# truls-mentor-group-optimizer

./: .gitignore  LICENSE  README.md  build-share-bundle.command  mentor-groups.command  pyproject.toml
.truls/: workspace.json
assets/: TRULS.icns
backend/app/: distribution.py  example_data.py  import_export.py  launcher.py  main.py  models.py  reporting.py  scoring.py  solver.py  validation.py  workspace_store.py
data_raw/: PeppI & Høvding ansökan.xlsx  Phadder & GrillI ansökan.xlsx  RESULTAT.xlsx  import_review_notes.md
data_raw/converted/: blocked_pairs.csv  conversion_notes.md  gender_review.csv  mentors.csv  scenario.json
examples/: demo_blocked_pairs.csv  demo_manifest.json  demo_mentors.csv  demo_scenario.json  tight_manifest.json  tight_mentors.csv  tight_scenario.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  proposals.ts  styles.css  test-setup.ts  types.ts
scripts/: convert_raw_selection.py  generate_app_icon.py  generate_seed_data.py  sync_converted_bundle.py
tests/: test_api.py  test_import_export.py  test_models.py  test_reporting.py  test_solver.py  test_validation.py  test_workspace_store.py
