[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mentor-groups"
version = "0.1.0"
description = "TRULS: an AI-generated local-first mentor group optimizer using FastAPI, OR-Tools CP-SAT, and React."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "ortools>=9.10,<10.0",
  "pydantic>=2.8,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
mentor-groups = "backend.app.launcher:main"
mentor-groups-dev = "backend.app.launcher:main_dev"

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["backend*"]
